syntax = "proto3";

package io.xpring;

option java_multiple_files = true;
option java_outer_classname = "GetLatestValidatedLedgerSequenceRequestProto";
option java_package = "io.xpring.proto";

// A request for the latest validated ledger sequence.
// Next field: 1
message GetLatestValidatedLedgerSequenceRequest {
}
